@@ -1,7 +1,16 @@
 package com.nextgenmanager.nextgenmanager.common.controller;
 
+import com.nextgenmanager.nextgenmanager.bom.service.BomServiceException;
+import com.nextgenmanager.nextgenmanager.bom.service.BusinessException;
+import com.nextgenmanager.nextgenmanager.bom.service.InvalidDataException;
 import com.nextgenmanager.nextgenmanager.bom.service.ResourceNotFoundException;
-import com.nextgenmanager.nextgenmanager.common.dto.ApiErrorResponse;
+import com.nextgenmanager.nextgenmanager.production.helper.InvalidTransitionException;
+import com.nextgenmanager.nextgenmanager.purchase.exception.InvalidPurchaseOrderStateException;
+import com.nextgenmanager.nextgenmanager.purchase.exception.PurchaseOrderNotFoundException;
+import com.nextgenmanager.nextgenmanager.purchase.requisition.exception.InvalidPurchaseRequisitionStateException;
+import com.nextgenmanager.nextgenmanager.purchase.requisition.exception.PurchaseRequisitionNotFoundException;
+import com.nextgenmanager.nextgenmanager.sales.exception.InvalidSalesOrderStateException;
+import com.nextgenmanager.nextgenmanager.sales.exception.SalesOrderNotFoundException;
 import jakarta.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -12,17 +21,15 @@ import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.time.OffsetDateTime;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -34,173 +41,166 @@ public class GlobalExceptionHandler {
             int status,
             String error,
             String message,
-            String path
+            String path,
+            Map<String, List<String>> fieldErrors
     ) {}
 
-    @ExceptionHandler(AccessDeniedException.class)
-    public ResponseEntity<ApiError> handleAccessDenied(
-            AccessDeniedException ex,
-            HttpServletRequest request) {
-
-        ApiError error = new ApiError(
+    private ApiError buildError(HttpStatus status, String message, HttpServletRequest request) {
+        return new ApiError(
                 OffsetDateTime.now(),
-                HttpStatus.FORBIDDEN.value(),
-                HttpStatus.FORBIDDEN.getReasonPhrase(),
-                "You do not have permission to access this resource",
-                request.getRequestURI()
+                status.value(),
+                status.getReasonPhrase(),
+                message,
+                request.getRequestURI(),
+                null
         );
-
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error);
     }
 
+    @ExceptionHandler(AccessDeniedException.class)
+    public ResponseEntity<ApiError> handleAccessDenied(AccessDeniedException ex, HttpServletRequest request) {
+        return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                .body(buildError(HttpStatus.FORBIDDEN, "You do not have permission to access this resource", request));
+    }
 
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiError> handleGeneric(
-            Exception ex,
-            HttpServletRequest request) {
-
-        // Log full stack trace internally
-        logger.error("Unhandled exception occurred at {}", request.getRequestURI(), ex);
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
-                "An unexpected error occurred. Please contact support.",
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+    @ExceptionHandler(BadCredentialsException.class)
+    public ResponseEntity<ApiError> handleBadCredentials(BadCredentialsException ex, HttpServletRequest request) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body(buildError(HttpStatus.UNAUTHORIZED, "Invalid username or password", request));
     }
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<ApiError> handleResourceNotFound(
-            ResourceNotFoundException ex,
-            HttpServletRequest request) {
+    public ResponseEntity<ApiError> handleResourceNotFound(ResourceNotFoundException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Resource not found");
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(buildError(HttpStatus.NOT_FOUND, message, request));
+    }
 
-        String message = (ex.getMessage() != null && !ex.getMessage().isBlank())
-                ? ex.getMessage()
-                : "Resource not found";
+    @ExceptionHandler(SalesOrderNotFoundException.class)
+    public ResponseEntity<ApiError> handleSalesOrderNotFound(SalesOrderNotFoundException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Sales order not found");
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(buildError(HttpStatus.NOT_FOUND, message, request));
+    }
 
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.NOT_FOUND.value(),
-                HttpStatus.NOT_FOUND.getReasonPhrase(),
-                message,
-                request.getRequestURI()
-        );
+    @ExceptionHandler(PurchaseOrderNotFoundException.class)
+    public ResponseEntity<ApiError> handlePurchaseOrderNotFound(PurchaseOrderNotFoundException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Purchase order not found");
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(buildError(HttpStatus.NOT_FOUND, message, request));
+    }
 
+    @ExceptionHandler(PurchaseRequisitionNotFoundException.class)
+    public ResponseEntity<ApiError> handlePurchaseRequisitionNotFound(PurchaseRequisitionNotFoundException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Purchase requisition not found");
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(buildError(HttpStatus.NOT_FOUND, message, request));
+    }
 
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+    @ExceptionHandler(BusinessException.class)
+    public ResponseEntity<ApiError> handleBusinessException(BusinessException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Business rule violation");
+        return ResponseEntity.badRequest()
+                .body(buildError(HttpStatus.BAD_REQUEST, message, request));
+    }
+
+    @ExceptionHandler(InvalidDataException.class)
+    public ResponseEntity<ApiError> handleInvalidData(InvalidDataException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Invalid data provided");
+        return ResponseEntity.badRequest()
+                .body(buildError(HttpStatus.BAD_REQUEST, message, request));
+    }
+
+    @ExceptionHandler(InvalidSalesOrderStateException.class)
+    public ResponseEntity<ApiError> handleInvalidSalesOrderState(InvalidSalesOrderStateException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("This action is not allowed for the current sales order status");
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, message, request));
+    }
+
+    @ExceptionHandler(InvalidPurchaseOrderStateException.class)
+    public ResponseEntity<ApiError> handleInvalidPurchaseOrderState(InvalidPurchaseOrderStateException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("This action is not allowed for the current purchase order status");
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, message, request));
+    }
+
+    @ExceptionHandler(InvalidPurchaseRequisitionStateException.class)
+    public ResponseEntity<ApiError> handleInvalidPurchaseRequisitionState(InvalidPurchaseRequisitionStateException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("This action is not allowed for the current requisition status");
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, message, request));
+    }
+
+    @ExceptionHandler(InvalidTransitionException.class)
+    public ResponseEntity<ApiError> handleInvalidTransition(InvalidTransitionException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("This state transition is not allowed");
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, message, request));
+    }
+
+    @ExceptionHandler(BomServiceException.class)
+    public ResponseEntity<ApiError> handleBomServiceException(BomServiceException ex, HttpServletRequest request) {
+        logger.error("BOM service error at {}", request.getRequestURI(), ex);
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("BOM operation failed");
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(buildError(HttpStatus.INTERNAL_SERVER_ERROR, message, request));
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<ApiError> handleIllegalArgument(
-            IllegalArgumentException ex,
-            HttpServletRequest request) {
-
-        String message = Optional.ofNullable(ex.getMessage())
-                .filter(m -> !m.isBlank())
-                .orElse("Invalid request");
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.BAD_REQUEST.value(),
-                HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                message,
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.badRequest().body(error);
+    public ResponseEntity<ApiError> handleIllegalArgument(IllegalArgumentException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Invalid request");
+        return ResponseEntity.badRequest()
+                .body(buildError(HttpStatus.BAD_REQUEST, message, request));
     }
 
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<ApiError> handleIllegalState(IllegalStateException ex, HttpServletRequest request) {
+        String message = Optional.ofNullable(ex.getMessage()).filter(m -> !m.isBlank()).orElse("Operation not allowed in the current state");
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, message, request));
+    }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiError> handleValidationException(
-            MethodArgumentNotValidException ex,
-            HttpServletRequest request) {
-
-        List<String> errors = ex.getBindingResult()
+    public ResponseEntity<ApiError> handleValidationException(MethodArgumentNotValidException ex, HttpServletRequest request) {
+        Map<String, List<String>> fieldErrors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .toList();
+                .collect(Collectors.groupingBy(
+                        fe -> fe.getField(),
+                        Collectors.mapping(fe -> fe.getDefaultMessage(), Collectors.toList())
+                ));
 
-        String message = String.join(", ", errors);
+        String summary = fieldErrors.entrySet().stream()
+                .map(e -> e.getKey() + ": " + String.join(", ", e.getValue()))
+                .collect(Collectors.joining("; "));
 
         ApiError apiError = new ApiError(
                 OffsetDateTime.now(),
                 HttpStatus.BAD_REQUEST.value(),
                 HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                message,
-                request.getRequestURI()
+                summary.isBlank() ? "Validation failed" : summary,
+                request.getRequestURI(),
+                fieldErrors
         );
 
         return ResponseEntity.badRequest().body(apiError);
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<ApiError> handleInvalidJson(
-            HttpMessageNotReadableException ex,
-            HttpServletRequest request) {
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.BAD_REQUEST.value(),
-                HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                "Malformed JSON request",
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.badRequest().body(error);
+    public ResponseEntity<ApiError> handleInvalidJson(HttpMessageNotReadableException ex, HttpServletRequest request) {
+        return ResponseEntity.badRequest()
+                .body(buildError(HttpStatus.BAD_REQUEST, "Malformed JSON request", request));
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<ApiError> handleTypeMismatch(
-            MethodArgumentTypeMismatchException ex,
-            HttpServletRequest request) {
-
-        String message = "Invalid value for parameter: " + ex.getName();
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.BAD_REQUEST.value(),
-                HttpStatus.BAD_REQUEST.getReasonPhrase(),
-                message,
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.badRequest().body(error);
-    }
-
-    @ExceptionHandler(IllegalStateException.class)
-    public ResponseEntity<ApiError> handleIllegalState(
-            IllegalStateException ex,
-            HttpServletRequest request) {
-
-        String message = Optional.ofNullable(ex.getMessage())
-                .filter(m -> !m.isBlank())
-                .orElse("Operation not allowed in the current state");
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.CONFLICT.value(),
-                HttpStatus.CONFLICT.getReasonPhrase(),
-                message,
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+    public ResponseEntity<ApiError> handleTypeMismatch(MethodArgumentTypeMismatchException ex, HttpServletRequest request) {
+        return ResponseEntity.badRequest()
+                .body(buildError(HttpStatus.BAD_REQUEST, "Invalid value for parameter: " + ex.getName(), request));
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
-    public ResponseEntity<ApiError> handleDatabaseError(
-            DataIntegrityViolationException ex,
-            HttpServletRequest request) {
-
-        String rootMessage = ex.getMostSpecificCause() != null
-                ? ex.getMostSpecificCause().getMessage()
-                : "";
+    public ResponseEntity<ApiError> handleDatabaseError(DataIntegrityViolationException ex, HttpServletRequest request) {
+        String rootMessage = ex.getMostSpecificCause() != null ? ex.getMostSpecificCause().getMessage() : "";
 
         String userMessage;
         if (rootMessage.contains("sales_order") && rootMessage.contains("ordernumber")) {
@@ -221,30 +221,14 @@ public class GlobalExceptionHandler {
             userMessage = "This operation could not be completed due to a data conflict.";
         }
 
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.CONFLICT.value(),
-                HttpStatus.CONFLICT.getReasonPhrase(),
-                userMessage,
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(buildError(HttpStatus.CONFLICT, userMessage, request));
     }
 
-    @ExceptionHandler(BadCredentialsException.class)
-    public ResponseEntity<ApiError> handleBadCredentials(
-            BadCredentialsException ex,
-            HttpServletRequest request) {
-
-        ApiError error = new ApiError(
-                OffsetDateTime.now(),
-                HttpStatus.UNAUTHORIZED.value(),
-                HttpStatus.UNAUTHORIZED.getReasonPhrase(),
-                "Invalid username or password",
-                request.getRequestURI()
-        );
-
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error);
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ApiError> handleGeneric(Exception ex, HttpServletRequest request) {
+        logger.error("Unhandled exception at {}", request.getRequestURI(), ex);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(buildError(HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred. Please contact support.", request));
     }
 }
